--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A developer looking forward to actively get an industry exposure and learn pragmatic approach towards Deep Learning and Android Development with a demonstrated history of project Development and management</p>
+		            <p>A developer looking forward to actively get an industry exposure and learn pragmatic approach towards Deep Learning and Software Development with a demonstrated history of project Development and management</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Yogesh Vishwanathan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 27, 1999</span></li>
@@ -757,7 +757,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>A developer looking forward to actively get an industry exposure and learn pragmatic approach towards Deep Learning and Web Development with a demonstrated history of project Development and management</p>
+              <p>A developer looking forward to actively get an industry exposure and learn pragmatic approach towards Deep Learning and Software Development with a demonstrated history of project Development and management</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 				<li class="ftco-animate"><a href="https://www.linkedin.com/in/yogesh-vishwanathan/"><span class="icon-linkedin"></span></a></li>
 				<li class="ftco-animate"><a href="https://github.com/yogesh2709/"><span class="icon-github"></span></a></li>
