--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2017-2021</span>
-		    					<h2>Bachelors of Engineering</h2>
+		    					<h2>Bachelors of Engineering in Computer Engineering</h2>
 		    					<span class="position">SIES Graduate School of Technology, Nerul</span>
-		    					<p>An highly motivated student with an active contribution to the community and egar participation in extra curricular activities</p>
+		    					<p>An highly motivated student with an active contribution to the community and eager participation in extra curricular activities</p>
 							<p>Average CGPA : 7.9 </p>
 		    				</div>
 	    				</div>
