--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Yogesh Vishwanathan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 27, 1999</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>103 1/2 Victoria Place</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>103 1/2 Victoria Place,Syracuse,NY </span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>13210</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>yvishwanathan@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+1-315-878-9847</span></li>
