--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		    					<h2>Bachelors of Engineering in Computer Engineering</h2>
 		    					<span class="position">SIES Graduate School of Technology, Nerul</span>
 		    					<p>An highly motivated student with an active contribution to the community and eager participation in extra curricular activities</p>
-							<p>Average CGPA : 7.9 </p>
+							<p>Average CGPA : 8.0 </p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -244,10 +244,10 @@
 								<span class="position">Technical Intern</span>
 								<p>Inventory Management System</p>
 								<ul>
-									<li>Collaborated with a team of engineers and developed Inventory Management System for various shipment orders and is currently being used by the company </li>
-									<li>The entire backend was devised using PostgreSQL</li>
-									<li>Front End was maintained by HTML/CSS/JS </li>
-									<li>Integrate with Java Servlets and Apache Tomcat for dynamic web page loading and low latency</li>
+									<li>Collaborated with a team of engineers and developed Inventory Management System for various shipment orders and is currently being used by the company. </li>
+									<li>The entire backend was devised using PostgreSQL.</li>
+									<li>Front End was maintained by HTML/CSS/JS. </li>
+									<li>Integrate with Java Servlets and Apache Tomcat for dynamic web page loading and low latency.</li>
 								</ul>
 
 		    				</div>
@@ -262,13 +262,53 @@
 								<span class="position">Java Application Developer Intern</span>
 								<p>Student Database Management System</p>
 								<ul>
-									<li>Devised a Student Database Management System currently being deployed by one of the top educational institutions in Mumbai</li>
-									<li>Implemenation of RDBMs on MySQL server for data archival and storage</li>
-									<li>Simplistic GUI for basic functionality using Java Swing library</li>
+									<li>Devised a Student Database Management System currently being deployed by one of the top educational institutions in Mumbai.</li>
+									<li>Implemenation of RDBMs on MySQL server for data archival and storage.</li>
+									<li>Simplistic GUI for basic functionality using Java Swing library.</li>
 								</ul>
 
 		    				</div>
 	    				</div>
+
+						<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">April 2022 - May 2022</span>
+		    					<h2>Goodlife Youth Foundation, Syracuse , New York</h2>
+								<span class="position">Database Developer </span>
+								<p>Notion Task Manager System</p>
+								<ul>
+									<li>Data management for event management and organization focused on NGO activities.</li>
+									<li>Organize and collaborate among volunteers using Notion and Air tables for visualizations and data management to ensure maximum engagement and
+										improve organization engagement.</li>
+									<li>Developing a dashboard for the same for live feedback with stakeholders using Tableau.</li>
+								</ul>
+
+		    				</div>
+	    				</div>
+
+						<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">May 2022 - Present </span>
+		    					<h2>Syracuse University , New York</h2>
+								<span class="position">Data Analyst</span>
+								<p></p>
+								<ul>
+									<li>Organize and collaborate among stakeholders and visualize Oracle Database Hyperion on Tableau.</li>
+									<li>Developing multiple dashboards using Scikit Learn and Tableau and managing AWS pipelines simultaneously.</li>
+									<li>Integration of Dataiku Platform with onboard dashboards for flexible use for the end user.</li>
+								</ul>
+
+		    				</div>
+	    				</div>
+
+
+						
 					  </div>
 					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
@@ -473,6 +513,9 @@
 									<li>Developed Facenet & MTCNN for Facial Landmark Detection.</li>
 									<li>Created a final product for the same using Bootstrap and Figma and hosted it on Twilio</li>
 									<li>Implemented OpenCV and PyAudio for Audio and Eyes Detection and hosted it on WebRTC.</li>
+									<li>We used FACENET & MTCNN for SOTA Facial Landmark Detection. The system was highly scalable , fault-tolerant and gave an efficiency of 98%</li>
+									<li>We have developed a full-stack website using Firebase, Twilio API, Posenet, HTML, CSS, JS, Bootstrap, Node Server, EJS template engine, RabbitMQ and
+										Flask API.</li>
 								</ul>
 		    				</div>
 	    				</div>
@@ -484,7 +527,25 @@
 		    					<h2>Gesture Keyboard for Deaf & Dumb</h2>
 		    					<ul>
 									<li>Executed the model utilizing Arduino & MPU -650 Accelerometer and Flex Sensors for Gesture Recognition</li>
-									<li>Low cost device which is a smart glove that can perform various sign language recognition to assist dumb and deaf people</li>
+									<li>Low cost device which is a smart glove that can perform various sign language recognition to assist dumb and deaf people.</li>
+									<li> Executed the model utilizing Arduino & MPU - 650 Accelerometer and Flex Sensors for Gesture Recognition.</li>
+									<li>We increased the overall performance by 60% and replaced sign interpreters with this device.</li>
+								</ul>
+		    				</div>
+						</div>
+
+						<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<h2>Predict Closed Q’s in StackOverflow</h2>
+		    					<ul>
+									<li></li>
+									<li>Prediction of Closed Q’s for distinguishing and assisting the Moderators for flagged posts in StackOverflow.</li>
+									<li> Created a baseline model with CNN using text classification and text categorization.</li>
+									<li> By making use of 1D Convolution and pooling, we try to extract required features/patterns that aid us in classification.</li>
+									<li>Integrated it with a LSTM to construct a Prediction Model for the same.</li>
 								</ul>
 		    				</div>
 						</div>
@@ -496,7 +557,7 @@
 		    					<h2>Movie Recommendation System</h2>
 								<ul>
 									<li>User Based Content filtering Recommendation</li>
-									<li>Using Cosine similarity and TF IDF Count vectarization for Recommendation</li>
+									<li>Using Cosine similarity and TF IDF Count vectarization for Recommendation.</li>
 								</ul>
 		    				</div>
 	    				</div>
